--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,7 +6,7 @@
 }
 html {height: 100%}
 body{
-    width: 98%;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
     background: url("/img/fon_1.jpg") no-repeat center fixed;
@@ -41,4 +41,14 @@ ul{
 #regAuth{
     width: 100%;
     text-align: right;
+}
+
+/***************** Футер *********************/
+footer{
+    width: 95%;
+    margin: 1% auto 0;
+    background-color: rgba(255,255,255,0.7);
+    padding: 1%;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
