--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,7 +9,6 @@ body{
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    background: url("/img/fon_1.jpg") no-repeat center fixed;
 }
 .clear{
     clear: both;
@@ -47,16 +46,19 @@ ul{
 #body{
     width: 95%;
     margin: 1% auto 0;
-    background-color: rgba(255,255,255,0.7);
     padding: 1%;
+    /*background-color: rgba(255,255,255,0.7);
     border-radius: 5px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.7);
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);*/
 }
 .cross{
     display: inline-block;
     width: 33%;
     height: 20%;
     text-align: center;
+}
+.cross span{
+    display: block;
 }
 .cross img{
     width: 45%;
