--- a/www/css/style.css
+++ b/www/css/style.css
@@ -52,6 +52,12 @@ body{
 #underLogo a:hover{
     box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
+#user {
+    position: absolute !important;
+}
+#user_name, #user_coins {
+    float: left !important;
+}
 ul{
     list-style: none;
 }
@@ -111,6 +117,7 @@ form#enter {
 #enter a:hover{
     text-decoration: underline;
 }
+
 
 /***************** Основная часть ************/
 #body{
@@ -190,6 +197,7 @@ div#underGrid {
     position: relative;
     margin: 0 8%;
     text-decoration: none;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
 
 /*положение всплывающей подсказки*/
@@ -247,3 +255,5 @@ form#register {
 div#er_mes {
     font-size: 25px;
 }
+
+
